package com.daw.cinemadaw.domain.cinema;

public enum SeatType {
    Standard,
    Premium,
    Adapted

}
