@startuml ClassDiagram
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty methods

' ---------- Enumerations ----------
enum SeatType {
    Standard
    Premium
    Adapted
}

enum OrderStatus {
    PENDING
    CONFIRMED
    CANCELLED
}

enum Role {
    ADMIN
    CLIENT
}

' ---------- Entities ----------
class Cinema {
    - Long id
    - String cinemaName
    - String city
    - String address
}

class Room {
    - Long id
    - String name
    - int capacity
}

class Seat {
    - Long id
    - String seatrow
    - int seatNumber
    - boolean estado
    - SeatType type
}

class Movie {
    - Long id
    - String title
    - int duration_minutes
    - String gener
}

class Screening {
    - Long id
    - LocalDateTime screeningDateTime
    - Double precio
}

class Order {
    - Long id
    - LocalDateTime orderDateTime
    - double totalAmount
    - OrderStatus status
}

class User {
    - Long id
    - String username
    - Role role
}

' ---------- Relationships ----------
Cinema "1" *-- "0..*" Room : contains >
Room "1" *-- "0..*" Seat : has >
Seat --> SeatType : is >

Screening "0..*" --> "1" Movie : screens >
Screening "0..*" --> "1" Room : held in >

Order "1" *-- "0..*" Ticket : includes >
Order --> OrderStatus : status >

User --> Role : has role >
@enduml